# ethersync-web

./: .gitignore  .gitmodules  .tool-versions  Cargo.toml  Dioxus.toml  README.md  build.sh  bundle-on-nixos.sh  start-on-nixos.sh  start.sh
assets/: main.css
frontend/: Cargo.toml  package-lock.json  package.json  vite.config.ts
frontend/src/: main.rs  main.ts
shared/: Cargo.toml
shared/src/: lib.rs
src/: main.rs  services.rs  shared.rs  ui.rs
src/services/: automerge_service.rs  connection_service.rs  node_service.rs
src/shared/: automerge_document.rs  chat_node.rs  ethersync_client.rs  ethersync_connection.rs  ethersync_node.rs  secret_address.rs
src/ui/: automerge_document_view.rs  automerge_messages_view.rs  connection_form.rs  connection_view.rs  file_content_view.rs  file_list.rs  incoming_messages_view.rs  new_message_form.rs  node_view.rs
wasm/: Cargo.toml  build.sh
wasm/src/: lib.rs
