[workspace]
resolver = "2"
members = [
    "wasm",
]
exclude = ["dummy"]

[workspace.dependencies]
iroh = { version = "=0.34", default-features = false }
iroh-base = { version = "=0.34", default-features = false, features = ["ticket"] }
iroh-gossip = { version = "=0.34", default-features = false, features = ["net"] }
rand = "0.8.5"
wasm-bindgen = "=0.2.100"
wasm-bindgen-futures = "0.4"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
