[package]
name = "iroh-web"
version = "0.1.0"
authors = ["winniehell <git@winniehell.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
automerge = { version = "0.5.9"}
constant_time_eq = "0.3.1"
dioxus = { version = "0.6.0", features = ["router"] }
iroh = "0.35"
rand = "0.8.5"
futures = "0.3.31"
uuid = { version = "1.17.0", features = ["js"] }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
derive_more = "1.0.0"
anyhow = "1.0.98"
magic-wormhole = "0.7.6"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
