[package]
name = "iroh-web-shared"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { workspace = true, features = [] }
iroh = { workspace = true }
iroh-base = { workspace = true }
rand = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

# https://github.com/seanmonstar/reqwest/issues/2719
reqwest = { workspace = true }

[features]
default = ["web"]
web = ["dioxus/web"]

[lib]
crate-type = ["cdylib", "rlib"]
