[package]
name = "iroh-web-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
iroh = { workspace = true }
iroh-base = { workspace = true, default-features = false, features = ["ticket"] }
iroh-gossip = { workspace = true, default-features = false, features = ["net"] }
rand = { workspace = true }

# 0.17.14 is not compatible with wasm (Failed to resolve import "env")
ring = { version = "=0.17.11", default-features = false, features = ["wasm32_unknown_unknown_js"] }

# https://docs.rs/getrandom/0.3.3/getrandom/#webassembly-support
_getrandom_alias_3 = { version = "0.3", package = "getrandom", features = [
    "std",
    "wasm_js",
] }

# 0.2 is necessary because of ring
# see https://github.com/briansmith/ring/issues/2341
# https://docs.rs/getrandom/0.2.16/getrandom/#webassembly-support
_getrandom_alias_2 = { version = "0.2", package = "getrandom", features = [
    "std",
    "js",
] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
